// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > project should handle default state 1`] = `
Object {
  "currentProject": undefined,
  "projects": Array [],
  "projectsById": Object {},
}
`;

exports[`reducers > project should handle delete project 1`] = `
Object {
  "currentProject": undefined,
  "projects": Array [],
  "projectsById": Object {},
}
`;

exports[`reducers > project should handle delete regional analysis 1`] = `
Object {
  "regionalAnalyses": Array [
    Object {
      "_id": "efgh",
      "bounds": Object {},
      "bundleId": "5678",
      "complete": true,
      "creationTime": 20000,
      "cutoffMinutes": 60,
      "deleted": false,
      "grid": "Jobs_total",
      "height": 300,
      "name": "ANALYSIS 2",
      "north": 20024,
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "bikeTrafficStress": 4,
        "carSpeed": 20,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxBikeTime": 20,
        "maxCarTime": 45,
        "maxRides": 4,
        "maxWalkTime": 20,
        "minBikeTime": 10,
        "minCarTime": 10,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "streetTime": 90,
        "suboptimalMinutes": 5,
        "toTime": 32400,
        "transitModes": "BUS,TRAM,RAIL,SUBWAY",
        "walkSpeed": 1.3888888888888888,
      },
      "scenarioId": "4321",
      "status": "DONE",
      "travelTimePercentile": 42,
      "variant": 1,
      "west": 20015,
      "width": 300,
      "workerVersion": "v3.2.0",
      "zoom": 9,
    },
  ],
}
`;

exports[`reducers > project should handle set all projects 1`] = `
Object {
  "currentProject": undefined,
  "projects": Array [
    Object {
      "_id": "1",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "name": "Mock Project",
      "opportunityDatasets": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "r5Version": "v3.2.0",
    },
  ],
  "projectsById": Object {
    "1": Object {
      "_id": "1",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "name": "Mock Project",
      "opportunityDatasets": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "r5Version": "v3.2.0",
    },
  },
}
`;

exports[`reducers > project should handle set project 1`] = `
Object {
  "currentProject": Object {
    "_id": "1",
    "bounds": Object {
      "east": -76,
      "north": 39,
      "south": 38,
      "west": -77,
    },
    "description": "Project description",
    "name": "Mock Project",
    "opportunityDatasets": Array [
      Object {
        "dataSource": "lodes-data-2014",
        "key": "Workers_total",
        "name": "Workers total",
      },
    ],
    "r5Version": "v3.2.0",
  },
  "projects": Array [
    Object {
      "_id": "1",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "name": "Mock Project",
      "opportunityDatasets": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "r5Version": "v3.2.0",
    },
  ],
  "projectsById": Object {
    "1": Object {
      "_id": "1",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "name": "Mock Project",
      "opportunityDatasets": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "r5Version": "v3.2.0",
    },
  },
}
`;
